--- a/style.css
+++ b/style.css
@@ -49,6 +49,11 @@ overflow-x: hidden;
     background: #03a9f4;
 }
 
+.navigation ul li:nth-child(1)
+{
+    margin-bottom: 20px;
+}
+
 .navigation ul li:nth-child(1):hover
 {
     background: transparent;
@@ -87,4 +92,46 @@ overflow-x: hidden;
     padding: 0 10px;
     line-height: 60px;
     height: 60px;
+    white-space: nowrap;
+}
+
+
+.main
+{
+    position: absolute;
+    width: calc( 100% - 300px);
+    left: 300px;
+    min-height: 100vh;
+    background: #f5f5f5;
+}
+
+.main .topbar
+{
+    width: 100%;
+    background: #fff;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.toggle
+{
+    position: relative;
+    width: 60px;
+    height: 60px;
+    background: #f00;
+}
+
+.toggle::before
+{
+    content: '\f0c9';
+    font-family: fontAwesome;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    line-height: 60px;
+    font-size: 24px;
+    text-align: center;
+    color: #111;
 }
