--- a/style.css
+++ b/style.css
@@ -29,6 +29,11 @@ overflow-x: hidden;
  overflow: hidden;
 }
 
+.navigation.active
+{
+    width: 60px;;
+}
+
 .navigation ul
 {
     position: absolute;
@@ -105,11 +110,18 @@ overflow-x: hidden;
     background: #f5f5f5;
 }
 
+.main.active
+{
+    width: calc(100% - 60px);
+    left: 60px;
+}
+
 .main .topbar
 {
     width: 100%;
     background: #fff;
     height: 60px;
+    padding: 0 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -120,7 +132,7 @@ overflow-x: hidden;
     position: relative;
     width: 60px;
     height: 60px;
-    background: #f00;
+    /* background: #f00; */
 }
 
 .toggle::before
@@ -134,4 +146,96 @@ overflow-x: hidden;
     font-size: 24px;
     text-align: center;
     color: #111;
+
+}
+
+.search
+{
+    position: relative;
+    width: 400px;
+    margin: 0 10px;
+}
+
+.search label
+{
+    position: relative;
+    width: 100%;
+}
+
+.search label input
+{
+    width: 100%;
+    height: 40px;
+    border-radius: 40px;
+    padding: 5px 20px;
+    padding-left: 35px;
+    outline: none;
+    border: 1px solid rgba(0,0,0,0.2);
+}
+
+.search label .fa
+{
+    position: absolute;
+    left: 15px;
+    top: 4px;
+}
+
+.user
+{
+    position: relative;
+    min-width: 50px;
+     width: 50px;
+    height: 50px;
+    border-radius: 50%;
+     overflow: hidden; 
+    cursor: pointer; 
+}
+
+.user img
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+
+.cardBox
+{
+    position: relative;
+    width: 100%;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-gap: 20px;
+}
+
+.cardBox .card
+{
+    position: relative;
+    background: #fff;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+}
+
+.cardBox .card .numbers
+{
+    position: relative;
+    font-size: 2em;
+    font-weight: 500;
+}
+
+.cardBox .card .cardName
+{
+    color: #999;
+}
+
+.cardBox .card .iconBox
+{
+    font-size: 2.5em;
+    color: #03a9f4;
 }
