--- a/style.css
+++ b/style.css
@@ -239,3 +239,275 @@ overflow-x: hidden;
     font-size: 2.5em;
     color: #03a9f4;
 }
+
+.details
+{
+    position: relative;
+    width: 100%;
+    padding: 20px;
+    padding-top: 0;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+}
+
+.details .recentOrders
+{
+    position: relative;
+    display: grid;
+    min-height: 530px;
+    background:#fff;
+    padding: 20px;
+}
+
+.cardHeader
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.cardHeader h2
+{
+ font-weight: 600;   
+}
+
+.btn
+{
+    position: relative;
+    padding: 5px 10px;
+    background: #03a9f4;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 6px;
+}
+
+.details table
+{
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 10px;
+}
+
+.details table thead td
+{
+   font-weight: 600; 
+}
+
+.details .recentOrders table tr
+{
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+}
+
+.details .recentOrders table tr:last-child
+{
+    border-bottom: none;
+}
+
+.details .recentOrders table tr:hover
+{
+    background: #03a9f4;
+    color: #fff;
+}
+
+.details .recentOrders table tr td
+{
+    padding: 9px 5px;
+}
+
+.details .recentOrders table tbody tr td :last-child,
+.details .recentOrders table tbody tr td :last-child
+{
+    text-align: right;
+}
+
+.details .recentOrders table tbody tr td :nth-child(2),
+.details .recentOrders table tbody tr td :nth-child(2)
+{
+    text-align: right;
+    padding-right: 20px;
+}
+
+.details .recentOrders table tbody tr td :nth-child(3),
+.details .recentOrders table tbody tr td :nth-child(3)
+{
+    text-align: center;
+ }
+
+ .status
+ {
+     position: relative;
+     padding: 2px 4px;
+     background: #f00;
+     color: #fff;
+     border-radius: 4px;
+     font-size: 14px;
+     font-weight: 300;
+     letter-spacing: 1px;
+ }
+
+.delivered 
+{
+    background: #8de02c;
+}
+
+.pending
+{
+    background: #f9ca3f;
+}
+
+.return
+{
+   background: #f00; 
+}
+
+.inprogress
+{
+    background: #1795ce;
+}
+
+.details .recentCustomers
+{
+    position: relative;
+    display: grid;
+    min-height: 530px;
+    background: #fff;
+    padding: 20px;
+    margin-left: 10px;
+}
+
+.details .recentCustomers .imgBx
+{
+    position: relative;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.details .recentCustomers .imgBx img
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+.details .recentCustomers table tr td h4 span
+{
+    font-size: 14px;
+    color: #999;
+}
+
+.details .recentCustomers table tr:hover,
+.details .recentCustomers table tr:hover 
+{
+    background: #03a9f4;
+    color: #fff;
+}
+
+.details .recentCustomers table tr td
+{
+    padding: 7px 10px;
+}
+
+.details .recentCustomers table tr td h4
+{
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.2em;
+}
+
+/* @media (max-width: 992px)
+{
+    .navigation
+    {
+        left: -300px;
+    }
+
+    .navigation .active
+    {
+        left: 0;
+    }
+
+    .main
+    {
+        width: 100%;  
+        left: 0; 
+    }
+    .main .active
+    {
+        width: calc(100% -300px);
+        left: 300px;
+    }
+
+    .cardBox
+    {
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+
+@media(max-width:768px)
+{
+    .details
+    {
+        grid-template-columns: repeat(1,1fr);
+    }
+    .cardHeader h2
+    {
+        font-weight: 600;
+        font-size: 18px;
+    }
+}
+
+@media(max-width:480px)
+{
+    .cardBox
+    {
+        grid-template-columns: repeat(1,1fr);
+    }
+
+    .details .recentOrders
+    {
+        overflow-x: auto;
+    }
+    .details .recentOrders table
+    {
+        width: 600px;
+    }
+    .navigation
+    {
+        width: 100%;
+        left: -100%;
+        z-index: 1000;
+    }
+
+    .navigation .active
+    {
+        width: 100%;
+        left: 0;
+    }
+    .toggle
+    {
+        position: fixed;
+        z-index: 10000;
+        right: 0;
+        left: initial;
+    }
+
+    .toggle.active::before
+    {
+        color: #fff;
+    }
+
+    .main,
+    .main .active 
+    {
+        width: 100%;
+        left: 0;
+    }
+    
+
+} */
